--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "bunyan-prettystream": "^0.1.3",
     "cheerio": "^0.19.0",
     "co": "^4.6.0",
+    "fivebeans": "^1.3.1",
     "js-yaml": "^3.4.2",
     "mongodb": "^2.0.45",
     "mongoskin": "^2.0.1",
-    "nodestalker": "^0.1.18",
     "request": "^2.51.0",
     "syntax-error": "^1.1.4"
   }
