--- a/config/config.yml
+++ b/config/config.yml
@@ -1,16 +1,27 @@
 default:
   logger: &logger
-    name: webot
+    name: node_promise_scraper
     #level 'CRITICAL','ERROR','WARNING','INFO','DEBUG'
+  mongo: &mongo
+    host: 127.0.0.1
+    port: 27017
+  beanstalkd: &beanstalkd
+    host: 127.0.0.1
+    port: 11300
 
 development:
   scraper:
-    #controller_count & sockets = 20:
-    #  almost the most efficient, it wont scale up much even increase the count
-    globalMaxSockets: 20
-    cluster_mode: 1
-    controller_count: 20
+    #Number of chance given to a failed job
     retry_count: 0
+    #Maximum global socket per process
+    globalMaxSockets: 20
+    #Number of WebScraperController per process
+    controller_count: 20
+    #cluster_mode = 0:
+    #  there will be only one WebScraperProcess
+    #cluster_mode = 1:
+    #  there will be multiple WebScraperProcess in same machine depends on number of CPU
+    cluster_mode: 0
   logger:
     <<: *logger
     file_log:
@@ -24,10 +35,35 @@ development:
     #proxy_host: 36.238.87.236
     #proxy_port: 3128
   mongo:
+    <<: *mongo
     database: webot_development
-    host: 127.0.0.1
-    port: 27017
   beanstalkd:
+    <<: *beanstalkd
     tube_name: node_promise_scraper_development
-    host: 127.0.0.1
-    port: 11300
+
+production:
+  scraper:
+    retry_count: 0
+    globalMaxSockets: 20
+    controller_count: 20
+    cluster_mode: 0
+  logger:
+    <<: *logger
+    file_log:
+      filename: production_log.log
+      level: WARN
+    stdout_log:
+      level: WARN
+  selenium:
+    type: remote
+    remote_server_path: http://192.168.33.1:4444/wd/hub
+    #proxy_host: 36.238.87.236
+    #proxy_port: 3128
+  mongo:
+    <<: *mongo
+    database: webot_production
+
+  beanstalkd:
+    <<: *beanstalkd
+    tube_name: node_promise_scraper_production
+
