--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cheerio": "^0.19.0",
     "co": "^4.6.0",
     "fivebeans": "^1.3.1",
+    "http-proxy-agent": "^1.0.0",
+    "https-proxy-agent": "^1.0.0",
     "js-yaml": "^3.4.2",
     "mongodb": "^2.0.45",
     "mongoskin": "^2.0.1",
