--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kitto Lau",
   "license": "MIT",
   "dependencies": {
+    "bloomfilter": "0.0.16",
     "bluebird": "^2.10.2",
     "bunyan": "^1.5.1",
     "bunyan-prettystream": "^0.1.3",
@@ -14,7 +15,9 @@
     "fivebeans": "^1.3.1",
     "http-proxy-agent": "^1.0.0",
     "https-proxy-agent": "^1.0.0",
+    "jquery": "^2.1.4",
     "js-yaml": "^3.4.2",
+    "jsdom": "^7.0.1",
     "mongodb": "^2.0.45",
     "mongoskin": "^2.0.1",
     "request": "^2.51.0",
