--- a/config/config.yml
+++ b/config/config.yml
@@ -14,23 +14,22 @@ development:
     #Number of chance given to a failed job
     retry_count: 0
     #Maximum global socket per process
-    globalMaxSockets: 20
-    default_request_timeout_seconds: 10
+    globalMaxSockets: 4
+    default_request_timeout_seconds: 5
     #Number of WebScraperController per process
-    controller_count: 80
+    controller_count: 16
     #cluster_mode = 0:
     #  there will be only one WebScraperProcess
     #cluster_mode = 1:
     #  there will be multiple WebScraperProcess in same machine depends on number of CPU
-    cluster_mode: 0
-    default_tube_name: nps_other_domain
+    cluster_mode: 1
   logger:
     <<: *logger
     file_log:
       filename: debug_log.log
-      level: DEBUG
+      level: INFO
     stdout_log:
-      level: DEBUG
+      level: INFO
   selenium:
     type: remote
     remote_server_path: http://192.168.33.1:4444/wd/hub
@@ -39,31 +38,6 @@ development:
   mongo:
     <<: *mongo
     database: webot_development
-  beanstalkd:
-    <<: *beanstalkd
-
-production:
-  scraper:
-    retry_count: 0
-    globalMaxSockets: 20
-    controller_count: 20
-    cluster_mode: 0
-  logger:
-    <<: *logger
-    file_log:
-      filename: production_log.log
-      level: WARN
-    stdout_log:
-      level: WARN
-  selenium:
-    type: remote
-    remote_server_path: http://192.168.33.1:4444/wd/hub
-    #proxy_host: 36.238.87.236
-    #proxy_port: 3128
-  mongo:
-    <<: *mongo
-    database: webot_production
-
   beanstalkd:
     <<: *beanstalkd
 
