--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bunyan-prettystream": "^0.1.3",
     "cheerio": "^0.19.0",
     "co": "^4.6.0",
+    "cron": "^1.0.9",
     "fivebeans": "^1.3.1",
     "http-proxy-agent": "^1.0.0",
     "https-proxy-agent": "^1.0.0",
@@ -20,6 +21,7 @@
     "jsdom": "^7.0.1",
     "mongodb": "^2.0.45",
     "mongoskin": "^2.0.1",
+    "qs": "^5.2.0",
     "request": "^2.51.0",
     "socksv5": "0.0.6",
     "syntax-error": "^1.1.4"
