--- a/config/config.yml
+++ b/config/config.yml
@@ -14,7 +14,7 @@ development:
     #Number of chance given to a failed job
     retry_count: 0
     #Maximum global socket per process
-    globalMaxSockets: 2
+    globalMaxSockets: 4
     default_request_timeout_seconds: 5
     #Number of WebScraperController per process
     controller_count: 20
@@ -22,7 +22,9 @@ development:
     #  there will be only one WebScraperProcess
     #cluster_mode = 1:
     #  there will be multiple WebScraperProcess in same machine depends on number of CPU
-    cluster_mode: 1
+    cluster_mode: 0
+    default_http_proxy: http://10.0.2.2:8888
+    default_https_proxy: http://10.0.2.2:8888
   logger:
     <<: *logger
     file_log:
@@ -41,3 +43,34 @@ development:
   beanstalkd:
     <<: *beanstalkd
 
+production:
+  scraper:
+    #Number of chance given to a failed job
+    retry_count: 3
+    #Maximum global socket per process
+    globalMaxSockets: 4
+    default_request_timeout_seconds: 5
+    #Number of WebScraperController per process
+    controller_count: 30
+    #cluster_mode = 0:
+    #  there will be only one WebScraperProcess
+    #cluster_mode = 1:
+    #  there will be multiple WebScraperProcess in same machine depends on number of CPU
+    cluster_mode: 1
+  logger:
+    <<: *logger
+    file_log:
+      filename: debug_log.log
+      level: WARN
+    stdout_log:
+      level: WARN
+  selenium:
+    type: remote
+    remote_server_path: http://192.168.33.1:4444/wd/hub
+    #proxy_host: 36.238.87.236
+    #proxy_port: 3128
+  mongo:
+    <<: *mongo
+    database: webot_development
+  beanstalkd:
+    <<: *beanstalkd
