updated removed scraper_update_at in upsert

--- a/config/config.yml
+++ b/config/config.yml
@@ -39,7 +39,7 @@ development:
     #proxy_port: 3128
   mongo:
     <<: *mongo
-    database: webot_development
+    database: proscraper_development
   beanstalkd:
     <<: *beanstalkd
 
